Shoes::Widget and Shoes::TextWidget, not Scarpe::Widget

--- a/templates/basic_class_template.erb
+++ b/templates/basic_class_template.erb
@@ -2,7 +2,7 @@
 # frozen_string_literal: true
 
 class Scarpe
-  class <%= argument %> < Scarpe::Widget
+  class <%= argument %> < Shoes::Widget
 
     # Display Properties
     # These properties determine the visual characteristics of the widget
