--- a/templates/class_template_with_event_bind.erb
+++ b/templates/class_template_with_event_bind.erb
@@ -1,7 +1,7 @@
 # frozen_string_literal: true
 
 class Scarpe
-  class <%= argument %> < Scarpe::Widget
+  class <%= argument %> < Shoes::Widget
      display_properties <%= display_properties %> # Write your display proporties here
 
     def initialize(text, width: nil, height: nil, top: nil, left: nil, &block)
