--- a/templates/class_template_with_shapes.erb
+++ b/templates/class_template_with_shapes.erb
@@ -3,7 +3,7 @@
 class Scarpe
   class InvalidAttributeValueError < StandardError; end
 
-  class <%= argument %> < Scarpe::Widget
+  class <%= argument %> < Shoes::Widget
      display_properties <%= display_properties %>  # Write your display proporties here
 
     def initialize(left, top)
