generating files is broken due to repo changes

--- a/templates/webview_template.erb
+++ b/templates/webview_template.erb
@@ -1,7 +1,7 @@
 # frozen_string_literal: true
 
-class Scarpe
-  class Webview<%= argument %> < Scarpe::WebviewWidget
+module Scarpe::Webview
+  class <%= argument %> < Widget
 
     def initialize(properties)
       super
