--- a/templates/basic_class_template.erb
+++ b/templates/basic_class_template.erb
@@ -1,7 +1,7 @@
 # class_template.erb
 # frozen_string_literal: true
 
-class Scarpe
+module Shoes
   class <%= argument %> < Shoes::Widget
 
     # Display Properties
