Scarpe should be a module, not a class.

--- a/templates/class_template_with_event_bind.erb
+++ b/templates/class_template_with_event_bind.erb
@@ -1,6 +1,6 @@
 # frozen_string_literal: true
 
-class Scarpe
+module Scarpe
   class <%= argument %> < Shoes::Widget
      display_properties <%= display_properties %> # Write your display proporties here
 
