--- a/templates/class_template_with_shapes.erb
+++ b/templates/class_template_with_shapes.erb
@@ -1,6 +1,6 @@
 # frozen_string_literal: true
 
-class Scarpe
+module Scarpe
   class InvalidAttributeValueError < StandardError; end
 
   class <%= argument %> < Shoes::Widget
