--- a/templates/module_template.erb
+++ b/templates/module_template.erb
@@ -1,6 +1,6 @@
 # frozen_string_literal: true
 
-class Scarpe
+module Scarpe
   module <%= argument %>
     def self.included(includer)
     <%# add display propeties below... for this example :background_color is added as display_property %>
