--- a/templates/basic_class_template.erb
+++ b/templates/basic_class_template.erb
@@ -2,16 +2,16 @@
 # frozen_string_literal: true
 
 module Shoes
-  class <%= argument %> < Shoes::Widget
+  class <%= argument %> < Shoes::Drawable
 
     # Display Properties
-    # These properties determine the visual characteristics of the widget
+    # These properties determine the visual characteristics of the drawable
     # Customize them according to your requirements
 
     # Example display properties:
-    # :background_color - Sets the background color of the widget (<%= argument %>)
-    # :width - Specifies the width of the widget(<%= argument %>)
-    # :height - Specifies the height of the widget(<%= argument %>)
+    # :background_color - Sets the background color of the drawable (<%= argument %>)
+    # :width - Specifies the width of the drawable(<%= argument %>)
+    # :height - Specifies the height of the drawable(<%= argument %>)
 
     display_properties <%= display_properties %>
 
@@ -27,12 +27,12 @@ module Shoes
       # end
 
 
-    # This method uses the DisplayService to create a visual representation of the widget
-    # It generates a display widget based on the specified display properties
-      create_display_widget
+      # This method uses the DisplayService to create a visual representation of the drawable
+      # It generates a display drawable based on the specified display properties
+      create_display_drawable
     end
 
-  # other methods
+    # other methods
 
   end
 end
