--- a/templates/class_template_with_shapes.erb
+++ b/templates/class_template_with_shapes.erb
@@ -1,17 +1,20 @@
 # frozen_string_literal: true
 
 module Scarpe
-  class InvalidAttributeValueError < StandardError; end
+  #class InvalidAttributeValueError < Scarpe::Error; end # add new errors to errors.rb
 
-  class <%= argument %> < Shoes::Widget
-     display_properties <%= display_properties %>  # Write your display proporties here
+  class <%= argument %> < Shoes::Drawable
+    # Display property with verification or value mapping:
+    # display_property(:left) { |val| convert_to_integer(val, "left") }
+
+    display_properties <%= display_properties %>  # Write your display properties here
 
     def initialize(left, top)
       @left = convert_to_integer(left, "left")
       @top = convert_to_integer(top, "top")
 
       super()
-      create_display_widget
+      create_display_drawable
     end
 
     private
@@ -19,18 +22,6 @@ module Scarpe
     def convert_to_integer(value, attribute_name, default = 0)
       begin
         value = Integer(value)
-        raise InvalidAttributeValueError, "Negative num '#{value}' not allowed for attribute '#{attribute_name}'" if value < 0
-
-        value
-      rescue ArgumentError
-        error_message = "Invalid value '#{value}' provided for attribute '#{attribute_name}'. The value should be a number."
-        raise InvalidAttributeValueError, error_message
-      end
-    end
-
-    def convert_to_float(value, attribute_name, default = 0.0)
-      begin
-        value = Float(value)
         raise InvalidAttributeValueError, "Negative num '#{value}' not allowed for attribute '#{attribute_name}'" if value < 0
 
         value
