--- a/templates/webview_template.erb
+++ b/templates/webview_template.erb
@@ -1,13 +1,14 @@
 # frozen_string_literal: true
 
 module Scarpe::Webview
-  class <%= argument %> < Widget
+  class <%= argument %> < Drawable
 
     def initialize(properties)
       super
 
     end
 
+    # If the drawable is intended to be overridable, add element and style to Calzini instead
     def element
       HTML.render do |h|
         h.textarea(id: html_id, style: style)
