--- a/templates/class_template_with_event_bind.erb
+++ b/templates/class_template_with_event_bind.erb
@@ -2,7 +2,7 @@
 
 module Scarpe
   class <%= argument %> < Shoes::Drawable
-    display_properties <%= display_properties %> # Write your display proporties here
+    shoes_styles <%= shoes_styles %> # Write your shoes styles here
 
     def initialize(text, width: nil, height: nil, top: nil, left: nil, &block)
       # Properties passed as positional args, not keywords, don't get auto-set
