--- a/templates/module_template.erb
+++ b/templates/module_template.erb
@@ -3,10 +3,10 @@
 module Scarpe
   module <%= argument %>
     def self.included(includer)
-    <%# add display propeties below... for this example :background_color is added as display_property %>
-      includer.display_property(:background_color)
+    <%# add shoes styles below... for this example :background_color is added as shoes_style %>
+      includer.shoes_style(:background_color)
     end
 
-# Write any methods here!
+    # Write any methods here!
   end
 end
